package(default_visibility = ["@mujoco//:__subpackages__"])

cc_library(
    name = "pid",
    srcs = ["pid.cc"],
    hdrs = ["pid.h"],
    copts = [
        "-Wno-sign-compare",
    ],
    deps = [
        "//:mujoco_hdrs",
    ],
)

cc_library(
    name = "register",
    srcs = [
        "register.cc",
    ],
    deps = [
        ":pid",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

cc_shared_library(
    name = "actuator",
    dynamic_deps = [
        "//:mujoco_shared",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "register",
    ],
)
