load("@mujoco//tools:def.bzl", "mj_cc_library")

package(default_visibility = ["@mujoco//:__subpackages__"])

mj_cc_library(
    name = "sdf_impl",
    srcs = [
        "sdf.cc",
    ],
    hdrs = [
        "sdf.h",
    ],
    deps = [
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "torus",
    srcs = [
        "torus.cc",
    ],
    hdrs = [
        "torus.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "bolt",
    srcs = [
        "bolt.cc",
    ],
    hdrs = [
        "bolt.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "bowl",
    srcs = [
        "bowl.cc",
    ],
    hdrs = [
        "bowl.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "nut",
    srcs = [
        "nut.cc",
    ],
    hdrs = [
        "nut.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "gear",
    srcs = [
        "gear.cc",
    ],
    hdrs = [
        "gear.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "sdflib",
    srcs = [
        "sdflib.cc",
    ],
    hdrs = [
        "sdflib.h",
    ],
    deps = [
        ":sdf_impl",
        "//:mujoco_hdrs",
        "@SdfLib",
    ],
    alwayslink = True,
)

mj_cc_library(
    name = "register",
    srcs = [
        "register.cc",
    ],
    hdrs = [
        "bolt.h",
        "bowl.h",
        "gear.h",
        "nut.h",
        "sdf.h",
        "sdflib.h",
        "torus.h",
    ],
    deps = [
        ":bolt",
        ":bowl",
        ":gear",
        ":nut",
        ":sdflib",
        ":torus",
        "//:mujoco_hdrs",
        "@SdfLib",
    ],
    alwayslink = True,
)

cc_shared_library(
    name = "sdf",
    dynamic_deps = [
        "//:mujoco_shared",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "register",
    ],
)
